--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   "homepage": "https://github.com/jmangz/redo#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "config": "^1.30.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.2",
+    "morgan": "^1.9.0"
   }
 }
